kubernetes/apps/database/stackgres/operator/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stackgres-internal
  namespace: database
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - stackgres.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: stackgres-restapi
          port: 80
